<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    tools:context=".Activity">

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtViewKeyChain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.24"
        android:scrollHorizontally="true"
        android:scrollbars="horizontal|vertical"
        android:text="@string/txtViewKeyChain"
        android:textSize="20sp"
        android:visibility="gone" />
    
    <ListView
        android:id="@+id/listState"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_weight="0.14"
        android:text="@string/listview" />

     <CheckBox
         android:id="@+id/chkBoxSso"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:checked="true"
         android:text="@string/chkboxSsoEnable"
         android:visibility="gone" />

    <Button
        android:id="@+id/btnProductEndPoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnProductEndpoint"/>
    <Button
        android:id="@+id/btnFooEndpoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnFooEndpoint"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLogout"/>

    <Button
        android:id="@+id/btnDeregistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnUnregisterDevice"/>
	
    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <Button
            android:id="@+id/btnLogoutClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnLogoutClient" />
	    
	    <Button
	        android:id="@+id/btnClearStore"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" 
	        android:text="@string/btnClearState" />
	   </LinearLayout>
	       
</LinearLayout>